tests/compile-fail/integration_suite__integration__ecl_features__bad_arity_with_required_arg0.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: wrong number of arguments to 'hasMsgArg0'
  ┌─ <input>:7:5
  │
7 │     hasMsgArg0(@arg0=10, 3, 3);
  │     ^^^^^^^^^^ expects 3 arguments, got 2


